[package]
name = "newtf"
version = "0.1.0"
authors = ["risto <risto@hietala.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
tui = "0.13.0"
termion = "1.5.5"
rand = "0.8.0"
unicode-width = "0.1.8"